# agent-behavioral-analytics

./: .gitignore  PLANNING.md  README.md  pyproject.toml
aiba/: __init__.py  diagnostics.py  embed.py  report.py  schema.py
aiba/detectors/: __init__.py  action_hallucination.py  base.py  card_drift.py  cost.py  goal_drift.py  isoforest.py  loops.py  memory.py  sequence.py  tool_health.py
aiba/synth/: __init__.py  scenarios.py  traffic.py
data/sample/: README.md  agent_cards.jsonl  embeddings.npz  events.jsonl
planning_diagrams/: make_diagrams.py
scripts/: eval_isoforest.py  run_all.py
